--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
