--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "progress-tracker",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
